# state-finance-os

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
financeos/: __init__.py
financeos/apps/: advise.py  compare.py  cross_source.py  metrics.py  report.py
financeos/drivers/connectors/: base.py
financeos/drivers/connectors/prs/: budget_brief.py
financeos/drivers/connectors/prs/snapshots/: 2024-25.json
financeos/drivers/connectors/rbi/: bootstrap.py  handbook.py  state_finances.py
financeos/drivers/registries/: driver_registry.json  functional_categories.json  loader.py  major_heads.json  states.json
financeos/drivers/store/: ingestor.py
financeos/network/cli/: main.py
financeos/os/: conformance.py
financeos/os/llm/: __init__.py  client.py  config.py
financeos/os/sdk/: __init__.py
financeos/os/storage/: db.py  schema.py
spec/: CELL_SCHEMA.md  CONFORMANCE.md  DRIVER_INTERFACE.md  MAJOR_HEADS.md  METHODOLOGY.md
tests/: test_advise.py  test_cli_dotenv.py  test_compare.py  test_conformance.py  test_cross_source.py  test_handbook_driver.py  test_ingestor.py  test_llm_client.py  test_llm_config.py  test_metrics.py  test_prs_driver.py  test_rbi_driver.py  test_registries.py
validation/: cross_source_2024-25_BE.md  prs_ka_2024-25.md
