[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financeos"
version = "0.0.1"
description = "Platform for ingesting and reasoning over Indian state government budget data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Manish Srivastava", email = "manishsv@gmail.com" }]

dependencies = [
  "pandas>=2.0",
  "pdfplumber>=0.10",
  "openpyxl>=3.1",
  "requests>=2.31",
  "pydantic>=2.5",
  "anthropic>=0.40",
  "openai>=1.40",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]

[project.scripts]
financeos = "financeos.network.cli.main:main"

[tool.setuptools.packages.find]
include = ["financeos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"
